--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/uol_host
+spring.datasource.username=root
+spring.datasource.password=1102
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+liga.da.justica = https://raw.githubusercontent.com/uolhost/test-backEnd-Java/master/referencias/liga_da_justica.xml
+vingadores = https://raw.githubusercontent.com/uolhost/test-backEnd-Java/master/referencias/vingadores.json
